src/main/java/org/example/utils/error/EmployeeException.java
package org.example.utils.error;

public class EmployeeException extends RuntimeException {
    public EmployeeException(Throwable cause) {
        super(cause);
    }
}
